--- a/css/liuyancss.css
+++ b/css/liuyancss.css
@@ -4,7 +4,7 @@
 	margin-right: auto;
 	margin-left: auto;
 	text-align: center;
-	background-image: url(file:///E|/caowenyangdeyinyangshi_web/%E6%9C%AA%E6%A0%87%E9%A2%98-1_%E7%94%BB%E6%9D%BF%201.jpg);
+	background-image: url(https://images.weserv.nl/?url=https://i0.hdslb.com/bfs/article/f86c56148ead4cb9d4ce616663d61bcee59c4fa4.jpg);
 	color: #FFF;
 	background-color: #FFF;
 	height: 1920px;
@@ -49,7 +49,7 @@
 	height: 708px;
 	width: 1080px;
 	float: left;
-	background-image: url(file:///E|/caowenyangdeyinyangshi_web/9999999999.png);
+	background-image: url(https://images.weserv.nl/?url=https://i0.hdslb.com/bfs/article/07341530bf929e0a25b71f9e892e9bea2366a12b.png);
 }
 .guanyu .idliuyanban .kuang {
 	height: 700px;
@@ -124,7 +124,7 @@
 	text-align: right;
 	float: left;
 	padding-left: 0px;
-	background-image: url(file:///E|/caowenyangdeyinyangshi_web/xin1.png);
+	background-image: url(https://images.weserv.nl/?url=https://i0.hdslb.com/bfs/article/37b5ec9db229684aa80b36f514af66b006a24274.png);
 	margin-right: 40px;
 	margin-left: 40px;
 }
@@ -386,5 +386,5 @@ btn-style {
 	float: right;
 	width: 500px;
 	height: 206px;
-	background-image: url(file:///E|/caowenyangdeyinyangshi_web/%E6%9C%AA%E6%A0%87%E9%A2%98-7.png);
+	background-image: url(https://images.weserv.nl/?url=https://i0.hdslb.com/bfs/article/e8287e76b6c919781339153ca44b094295c65501.png);
 }
